--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,26 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+   
+
 }
+
+
+.app{
+  display: inline-block;
+  
+  background-color: aqua;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 0.2s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,8 +34,9 @@
   color: white;
 }
 
+
 .App-link {
-  color: #61dafb;
+  color: blue;
 }
 
 @keyframes App-logo-spin {
